--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Style PC -->
-    <link rel="stylesheet" href="style/stylepc.css" media="screen and (max-width: 3000px) and (min-width: 1000px)" />
-    <!-- Style Mobile -->
-    <link rel="stylesheet" href="public/style/main.css" media="screen and (max-width: 680px)" />
-    <!-- Style Tablette -->
-    <link rel="stylesheet" href="style/styletablette.css" media="screen and (max-width: 999px) and (min-width: 681px)" />
+
+    <!-- Style -->
+    <link rel="stylesheet" href="public/style/main.css" />
+
     <!-- Kit Fontawesome -->
     <script src="https://kit.fontawesome.com/03dc95f8fe.js" crossorigin="anonymous"></script>
+
     <!-- Roboto Font -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
-    <!-- Shrikhand -->
+
+    <!-- Shrikhand Font -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
+
     <!-- Titre de la page -->
     <title>Ohmyfood! - Accueil</title>
 </head>
@@ -52,74 +53,91 @@
     <h1 class="container__etiq">Fonctionnement</h1>
 
     <!-- 1 | Choisissez un restaurant -->
-    <div class="container__etiq--bloc">
-        <p class="container__etiq--number">1</p>
-        <i class="fas fa-mobile-alt container__etiq--icon"></i>
-        <p class="container__etiq--txt">Choisissez un restaurant</p>
-    </div>
+    <div class="container__etiq--container">
+        <div class="container__etiq--bloc">
+            <p class="container__etiq--number">1</p>
+            <i class="fas fa-mobile-alt container__etiq--icon"></i>
+            <p class="container__etiq--txt">Choisissez un restaurant</p>
+        </div>
 
-    <!-- 2 | Composez votre menu -->
-    <div class="container__etiq--bloc">
-        <p class="container__etiq--number">2</p>
-        <i class="fas fa-list container__etiq--icon"></i>
-        <p class="container__etiq--txt">Composez votre menu</p>
-    </div>
+        <!-- 2 | Composez votre menu -->
+        <div class="container__etiq--bloc">
+            <p class="container__etiq--number">2</p>
+            <i class="fas fa-list container__etiq--icon"></i>
+            <p class="container__etiq--txt">Composez votre menu</p>
+        </div>
 
-    <!-- 3 | Dégustez au restaurant -->
-    <div class="container__etiq--bloc">
-        <p class="container__etiq--number">3</p>
-        <i class="fas fa-store container__etiq--icon"></i>
-        <p class="container__etiq--txt">Dégustez au restaurant</p>
+        <!-- 3 | Dégustez au restaurant -->
+        <div class="container__etiq--bloc">
+            <p class="container__etiq--number">3</p>
+            <i class="fas fa-store container__etiq--icon"></i>
+            <p class="container__etiq--txt">Dégustez au restaurant</p>
+        </div>
     </div>
 
     <!-- Section restaurants -->
     <div id="container__restaurants">
         <div class="container__restaurants--section">
             <h1 class="container__restaurants--titlehead">Restaurants</h1>
-
+            <div class="container__restaurants--allblocs">
             <!-- La palette du goût -->
-            <div class="container__restaurants--bloc">
-                <a href="pages/palettedugout.html">
-                    <img src="imgs/palettedugout.jpg" class="container__restaurants--img" alt="La Palette du Goût - Ohmyfood!" />
-                    <h2 class="container__restaurants--title">La Palette du Goût</h2>
-                    <p class="container__restaurants--txt">Ménilmontant</p>
-                </a>
-                <i class="fas fa-heart container__restaurants--heart"></i>
-                <i class="far fa-heart container__restaurants--filledheart"></i>
-            </div>
+                <div class="container__restaurants--bloc">
+                    <a href="pages/palettedugout.html">
+                        <img src="imgs/palettedugout.jpg" class="container__restaurants--img"
+                            alt="La Palette du Goût - Ohmyfood!" />
+                        <h2 class="container__restaurants--title">La Palette du Goût</h2>
+                        <p class="container__restaurants--txt">Ménilmontant</p>
+                    </a>
+                    <div class="container__restaurants--heartcontainer">
+                        <i class="fas fa-heart container__restaurants--filledheart"></i>
+                        <i class="far fa-heart container__restaurants--heart"></i>
+                    </div>
+                </div>
 
-            <!-- La note enchantée -->
-            <div class="container__restaurants--bloc">
-                <a href="pages/noteenchantee.html">
-                    <img src="imgs/noteenchantee.jpg" class="container__restaurants--img" alt="La Note Enchantée - Ohmyfood!" />
-                    <h2 class="container__restaurants--title">La Note Enchantée</h2>
-                    <p class="container__restaurants--txt">Charonne</p>
-                </a>
-                <i class="fas fa-heart container__restaurants--heart"></i>
-            </div>
+                <!-- La note enchantée -->
+                <div class="container__restaurants--bloc">
+                    <a href="pages/noteenchantee.html">
+                        <img src="imgs/noteenchantee.jpg" class="container__restaurants--img"
+                            alt="La Note Enchantée - Ohmyfood!" />
+                        <h2 class="container__restaurants--title">La Note Enchantée</h2>
+                        <p class="container__restaurants--txt">Charonne</p>
+                    </a>
+                    <div class="container__restaurants--heartcontainer">
+                        <i class="fas fa-heart container__restaurants--filledheart"></i>
+                        <i class="far fa-heart container__restaurants--heart"></i>
+                    </div>
+                </div>
 
-            <!-- À la française -->
-            <div class="container__restaurants--bloc">
-                <a href="pages/alafrancaise.html">
-                    <img src="imgs/alafr.jpg" class="container__restaurants--img" alt="À la Française - Ohmyfood!" />
-                    <h2 class="container__restaurants--title">À la Française</h2>
-                    <p class="container__restaurants--txt">Cité Rouge</p>
-                </a>
-                <i class="fas fa-heart container__restaurants--heart"></i>
-            </div>
+                <!-- À la française -->
+                <div class="container__restaurants--bloc">
+                    <a href="pages/alafrancaise.html">
+                        <img src="imgs/alafr.jpg" class="container__restaurants--img"
+                            alt="À la Française - Ohmyfood!" />
+                        <h2 class="container__restaurants--title">À la Française</h2>
+                        <p class="container__restaurants--txt">Cité Rouge</p>
+                    </a>
+                    <div class="container__restaurants--heartcontainer">
+                        <i class="fas fa-heart container__restaurants--filledheart"></i>
+                        <i class="far fa-heart container__restaurants--heart"></i>
+                    </div>
+                </div>
 
-            <!-- Le délice des sens -->
-            <div class="container__restaurants--bloc">
-                <a href="pages/delicedessens.html">
-                    <img src="imgs/delicedessens.jpg" class="container__restaurants--img" alt="Le Délice des Sens - Ohmyfood!" />
-                    <h2 class="container__restaurants--title">Le Délice des Sens</h2>
-                    <p class="container__restaurants--txt">Folie Méricourt</p>
-                </a>
-                <i class="fas fa-heart container__restaurants--heart"></i>
+                <!-- Le délice des sens -->
+                <div class="container__restaurants--bloc">
+                    <a href="pages/delicedessens.html">
+                        <img src="imgs/delicedessens.jpg" class="container__restaurants--img"
+                            alt="Le Délice des Sens - Ohmyfood!" />
+                        <h2 class="container__restaurants--title">Le Délice des Sens</h2>
+                        <p class="container__restaurants--txt">Folie Méricourt</p>
+                    </a>
+                    <div class="container__restaurants--heartcontainer">
+                        <i class="fas fa-heart container__restaurants--filledheart"></i>
+                        <i class="far fa-heart container__restaurants--heart"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
 
     <!-- Footer -->
 
@@ -140,7 +158,6 @@
             </div>
         </div>
     </footer>
-
 
 </body>
 
