--- a/pages/palettedugout.html
+++ b/pages/palettedugout.html
@@ -4,13 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Style PC -->
-    <link rel="stylesheet" href="style/stylepc.css" media="screen and (max-width: 3000px) and (min-width: 1000px)" />
     <!-- Style Mobile -->
-    <link rel="stylesheet" href="../public/style/main.css" media="screen and (max-width: 680px)" />
-    <!-- Style Tablette -->
-    <link rel="stylesheet" href="style/styletablette.css"
-        media="screen and (max-width: 999px) and (min-width: 681px)" />
+    <link rel="stylesheet" href="../public/style/main.css"/>
     <!-- Kit Fontawesome -->
     <script src="https://kit.fontawesome.com/03dc95f8fe.js" crossorigin="anonymous"></script>
     <!-- Roboto Font -->
@@ -27,13 +22,13 @@
 
 <body>
 
-        <!-- Logo entête -->
-        <div>
-            <img src="../imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
-            <a href="../index.html"><i class="fas fa-arrow-left header--arrow"></i></a>
-        </div>
+    <!-- Logo entête -->
+    <div>
+        <img src="../imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
+        <a href="../index.html"><i class="fas fa-arrow-left header--arrow"></i></a>
+    </div>
 
-        <div class="toutelapage">
+    <div class="toutelapage">
 
         <!-- Bannière image -->
         <img src="../imgs/palettedugout.jpg" class="header__imgpagemenu" alt="Ohmyfood! La Palette du Goût" />
@@ -42,105 +37,126 @@
         <div class="container__menu">
             <div class="container__menu--head">
                 <h1 class="container__menu--title">La palette du goût</h1>
-                <i class="fas fa-heart container__menu--heartmenu"></i>
+                <div class="container__menu--heartmenucontainer">
+                    <i class="fas fa-heart container__menu--filledheartmenu"></i>
+                    <i class="far fa-heart container__menu--heartmenu"></i>
+                </div>
             </div>
+
             <!-- Entrées -->
-            <h2 class="container__menu--typeplat">ENTRÉES</h2>
-            <div class="container__menu--barreverte"></div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Fricassée d'escargot</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Au piment d'espelette</p>
-                    <p class="container__menu--prix">25€</p>
+            <div>
+                <h2 class="container__menu--typeplat">ENTRÉES</h2>
+                <div class="container__menu--barreverte"></div>
+                <div class="container__menu--bloc">
+                    <div class="container__menu--txts">
+                        <h3 class="container__menu--titreplat">Fricassée d'escargot</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Au piment d'espelette</p>
+                            <p class="container__menu--prix">25€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
+                    </div>
                 </div>
-            </div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Foie gras de canard mi-cuit</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Et ses copeaux de truffe noire</p>
-                    <p class="container__menu--prix">35€</p>
+                <div class="container__menu--bloc">
+                    <div class="container__menu--txts">
+                        <h3 class="container__menu--titreplat">Foie gras de canard mi-cuit</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Et ses copeaux de truffe noire</p>
+                            <p class="container__menu--prix">35€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
+                    </div>
                 </div>
-            </div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Oeuf au plat</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Assaisonné à la truffe sur lit de...</p>
-                    <p class="container__menu--prix">35€</p>
+                <div class="container__menu--bloc">
+                    <div class="container__menu--txts">
+                        <h3 class="container__menu--titreplat">Oeuf au plat</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Assaisonné à la truffe sur lit de caviar</p>
+                            <p class="container__menu--prix">35€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
+                    </div>
                 </div>
-            </div>
-            <!-- Plats -->
-            <h2 class="container__menu--typeplat">PLATS</h2>
-            <div class="container__menu--barreverte"></div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Filet de boeuf aux herbes</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Accompagné de sa ribambelle de légu...</p>
-                    <p class="container__menu--prix">40€</p>
+                <!-- Plats -->
+                <div>
+                    <h2 class="container__menu--typeplat">PLATS</h2>
+                    <div class="container__menu--barreverte"></div>
+                    <div class="container__menu--bloc">
+                        <h3 class="container__menu--titreplat">Filet de boeuf aux herbes</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Accompagné de sa ribambelle de légumes</p>
+                            <p class="container__menu--prix">40€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--bloc">
+                        <h3 class="container__menu--titreplat">Parmentier de queue de boeuf</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">À la truffe noire et sa purée de panais</p>
+                            <p class="container__menu--prix">35€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--bloc">
+                        <h3 class="container__menu--titreplat">Filet de Turbot</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Aux agrumes</p>
+                            <p class="container__menu--prix">44€</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Parmentier de queue de boeuf</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">À la truffe noire et sa purée de panais</p>
-                    <p class="container__menu--prix">35€</p>
+                <!-- Desserts -->
+                <div>
+                    <h2 class="container__menu--typeplat">DESSERTS</h2>
+                    <div class="container__menu--barreverte"></div>
+                    <div class="container__menu--bloc">
+                        <h3 class="container__menu--titreplat">Paris-Brest</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Revisité</p>
+                            <p class="container__menu--prix">18€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--bloc">
+                        <h3 class="container__menu--titreplat">Macaron au chocolat d'exception</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Et glace à la vanille de Madagascar</p>
+                            <p class="container__menu--prix">22€</p>
+                        </div>
+                    </div>
+                    <div class="container__menu--bloc">
+                        <h3 class="container__menu--titreplat">Mousse au chocolat</h3>
+                        <div class="container__menu--infoplat">
+                            <p class="container__menu--soustitreplat">Au piment d'espelette et à la truffe noire</p>
+                            <p class="container__menu--prix">23€</p>
+                        </div>
+                    </div>
+                    <div class="button">
+                        <p class="button--txt">Commander</p>
+                    </div>
                 </div>
-            </div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Filet de Turbot</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Aux agrumes</p>
-                    <p class="container__menu--prix">44€</p>
-                </div>
-            </div>
-            <!-- Desserts -->
-            <h2 class="container__menu--typeplat">DESSERTS</h2>
-            <div class="container__menu--barreverte"></div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Paris-Brest</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Revisité</p>
-                    <p class="container__menu--prix">18€</p>
-                </div>
-            </div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Macaron au chocolat d'exception</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Et glace à la vanille de Madagascar</p>
-                    <p class="container__menu--prix">22€</p>
-                </div>
-            </div>
-            <div class="container__menu--bloc">
-                <h3 class="container__menu--titreplat">Mousse au chocolat</h3>
-                <div class="container__menu--infoplat">
-                    <p class="container__menu--soustitreplat">Au piment d'espelette et à la truffe noire</p>
-                    <p class="container__menu--prix">23€</p>
-                </div>
-            </div>
-            <div class="button">
-                <p class="button--txt">Commander</p>
             </div>
         </div>
-    </div>
 
 
-    <!-- Footer -->
+        <!-- Footer -->
 
-    <footer>
-        <div class="footer">
-            <img src="../imgs/ohmyfood@2x.svg" class="footer--logo" alt="Logo Ohmyfood!" />
-            <div class="footer--icontxt">
-                <i class="fas fa-utensils footer--icon"></i>
-                <p class="footer--txt">Proposer un restaurant</p>
+        <footer>
+            <div class="footer">
+                <img src="../imgs/ohmyfood@2x.svg" class="footer--logo" alt="Logo Ohmyfood!" />
+                <div class="footer--icontxt">
+                    <i class="fas fa-utensils footer--icon"></i>
+                    <p class="footer--txt">Proposer un restaurant</p>
+                </div>
+                <div class="footer--icontxt">
+                    <i class="fas fa-hands-helping footer--icon"></i>
+                    <p class="footer--txt">Devenir partenaire</p>
+                </div>
+                <div class="footer--noicontxt">
+                    <p class="footer--txt">Mentions légales</p>
+                    <p class="footer--txt">Contact</p>
+                </div>
             </div>
-            <div class="footer--icontxt">
-                <i class="fas fa-hands-helping footer--icon"></i>
-                <p class="footer--txt">Devenir partenaire</p>
-            </div>
-            <div class="footer--noicontxt">
-                <p class="footer--txt">Mentions légales</p>
-                <p class="footer--txt">Contact</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
 </body>
