--- a/pages/palettedugout.html
+++ b/pages/palettedugout.html
@@ -33,110 +33,149 @@
         <!-- Bannière image -->
         <img src="../imgs/palettedugout.jpg" class="header__imgpagemenu" alt="Ohmyfood! La Palette du Goût" />
 
-        <!-- Section secondaire -->
-        <div class="container__menu">
-            <div class="container__menu--head">
-                <h1 class="container__menu--title">La palette du goût</h1>
-                <div class="container__menu--heartmenucontainer">
-                    <i class="fas fa-heart container__menu--filledheartmenu"></i>
-                    <i class="far fa-heart container__menu--heartmenu"></i>
+                <!-- Section secondaire -->
+                <div class="container__menu">
+                    <div class="container__menu--head">
+                        <h1 class="container__menu--title">La palette du goût</h1>
+                        <div class="container__menu--heartmenucontainer">
+                            <i class="fas fa-heart container__menu--filledheartmenu"></i>
+                            <i class="far fa-heart container__menu--heartmenu"></i>
+                        </div>
+                    </div>
+                    <!-- Entrées -->
+                    <div>
+                        <h2 class="container__menu--typeplat">ENTRÉES</h2>
+                        <div class="container__menu--barreverte"></div>
+                        <div class="container__menu--bloccontainer">
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Fricassée d'escargot</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Au piment d'espelette</p>
+                                        <p class="container__menu--prix">25€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Foie gras de canard mi-cuit</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Et ses copeaux de truffe noire</p>
+                                        <p class="container__menu--prix">35€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Oeuf au plat</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Assaisonné à la truffe sur lit de caviar</p>
+                                        <p class="container__menu--prix">35€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Plats -->
+                        <div>
+                            <h2 class="container__menu--typeplat">PLATS</h2>
+                            <div class="container__menu--barreverte"></div>
+                            <div class="container__menu--bloccontainer">
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Filet de boeuf aux herbes</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Accompagné de sa ribambelle de légumes</p>
+                                            <p class="container__menu--prix">40€</p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Parmentier de queue de boeuf</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">À la truffe noire et sa purée de panais</p>
+                                            <p class="container__menu--prix">35€</p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Filet de Turbot</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Aux agrumes</p>
+                                            <p class="container__menu--prix">44€
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Desserts -->
+                            <div>
+                                <h2 class="container__menu--typeplat">DESSERTS</h2>
+                                <div class="container__menu--barreverte"></div>
+                                <div class="container__menu--bloccontainer">
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Paris-Brest</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Revisité</p>
+                                                <p class="container__menu--prix">18€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Macaron au chocolat d'exception</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Et glace à la vanille de Madagascar</p>
+                                                <p class="container__menu--prix">22€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Mousse au chocolat</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Au piment d'espelette et à la truffe noire</p>
+                                                <p class="container__menu--prix">23€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="button">
+                                <p class="button--txt">Commander</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-
-            <!-- Entrées -->
-            <div>
-                <h2 class="container__menu--typeplat">ENTRÉES</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Fricassée d'escargot</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Au piment d'espelette</p>
-                            <p class="container__menu--prix">25€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Foie gras de canard mi-cuit</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Et ses copeaux de truffe noire</p>
-                            <p class="container__menu--prix">35€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Oeuf au plat</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Assaisonné à la truffe sur lit de caviar</p>
-                            <p class="container__menu--prix">35€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <!-- Plats -->
-                <div>
-                    <h2 class="container__menu--typeplat">PLATS</h2>
-                    <div class="container__menu--barreverte"></div>
-                    <div class="container__menu--bloc">
-                        <h3 class="container__menu--titreplat">Filet de boeuf aux herbes</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Accompagné de sa ribambelle de légumes</p>
-                            <p class="container__menu--prix">40€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--bloc">
-                        <h3 class="container__menu--titreplat">Parmentier de queue de boeuf</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">À la truffe noire et sa purée de panais</p>
-                            <p class="container__menu--prix">35€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--bloc">
-                        <h3 class="container__menu--titreplat">Filet de Turbot</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Aux agrumes</p>
-                            <p class="container__menu--prix">44€</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Desserts -->
-                <div>
-                    <h2 class="container__menu--typeplat">DESSERTS</h2>
-                    <div class="container__menu--barreverte"></div>
-                    <div class="container__menu--bloc">
-                        <h3 class="container__menu--titreplat">Paris-Brest</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Revisité</p>
-                            <p class="container__menu--prix">18€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--bloc">
-                        <h3 class="container__menu--titreplat">Macaron au chocolat d'exception</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Et glace à la vanille de Madagascar</p>
-                            <p class="container__menu--prix">22€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--bloc">
-                        <h3 class="container__menu--titreplat">Mousse au chocolat</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Au piment d'espelette et à la truffe noire</p>
-                            <p class="container__menu--prix">23€</p>
-                        </div>
-                    </div>
-                    <div class="button">
-                        <p class="button--txt">Commander</p>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
         <!-- Footer -->
