--- a/pages/delicedessens.html
+++ b/pages/delicedessens.html
@@ -33,98 +33,149 @@
         <!-- Bannière image -->
         <img src="../imgs/delicedessens.jpg" class="header__imgpagemenu" alt="Ohmyfood! Le délice des sens" />
 
-        <!-- Section secondaire -->
-        <div class="container__menu">
-            <div class="container__menu--head">
-                <h1 class="container__menu--title">Le délice des sens</h1>
-                <div class="container__menu--heartmenucontainer">
-                    <i class="fas fa-heart container__menu--filledheartmenu"></i>
-                    <i class="far fa-heart container__menu--heartmenu"></i>
-                </div>
-            </div>
-            <!-- Entrées -->
-            <div>
-                <h2 class="container__menu--typeplat">ENTRÉES</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Tartare de thon</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Assaisonné au yuzu</p>
-                        <p class="container__menu--prix">25€</p>
+                 <!-- Section secondaire -->
+                 <div class="container__menu">
+                    <div class="container__menu--head">
+                        <h1 class="container__menu--title">Le délice des sens</h1>
+                        <div class="container__menu--heartmenucontainer">
+                            <i class="fas fa-heart container__menu--filledheartmenu"></i>
+                            <i class="far fa-heart container__menu--heartmenu"></i>
+                        </div>
+                    </div>
+                    <!-- Entrées -->
+                    <div>
+                        <h2 class="container__menu--typeplat">ENTRÉES</h2>
+                        <div class="container__menu--barreverte"></div>
+                        <div class="container__menu--bloccontainer">
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Tartare de thon</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Assaisonné au yuzu</p>
+                                        <p class="container__menu--prix">25€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Bouchée de homard croustillant</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Et sa farandole de petits légumes</p>
+                                        <p class="container__menu--prix">35€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Velouté de cèpes</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Aux truffes</p>
+                                        <p class="container__menu--prix">20€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Plats -->
+                        <div>
+                            <h2 class="container__menu--typeplat">PLATS</h2>
+                            <div class="container__menu--barreverte"></div>
+                            <div class="container__menu--bloccontainer">
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Poulet rôti aux herbes de provence</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Et sa crème de truffe</p>
+                                            <p class="container__menu--prix">40€</p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Langouste rôtie</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Et ses légumes de saison</p>
+                                            <p class="container__menu--prix">35€</p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Côte de boeuf angus</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Aux agrumes</p>
+                                            <p class="container__menu--prix">44€
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Desserts -->
+                            <div>
+                                <h2 class="container__menu--typeplat">DESSERTS</h2>
+                                <div class="container__menu--barreverte"></div>
+                                <div class="container__menu--bloccontainer">
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Farandole de desserts</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Du chef</p>
+                                                <p class="container__menu--prix">18€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Crème brûlée</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Revisitée</p>
+                                                <p class="container__menu--prix">22€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Tiramisu</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">À la noisette</p>
+                                                <p class="container__menu--prix">23€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="button">
+                                <p class="button--txt">Commander</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Bouchée de homard croustillant</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Et sa farandole de petits légumes</p>
-                        <p class="container__menu--prix">35€</p>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Velouté de cèpes</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Aux truffes</p>
-                        <p class="container__menu--prix">20€</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Plats -->
-            <div>
-                <h2 class="container__menu--typeplat">PLATS</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Poulet rôti aux herbes de <br>provence</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Et sa crème de truffe</p>
-                        <p class="container__menu--prix">40€</p>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Langouste rôtie</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Et ses légumes de saison</p>
-                        <p class="container__menu--prix">35€</p>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Côte de boeuf angus</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Aux agrumes</p>
-                        <p class="container__menu--prix">44€</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Desserts -->
-            <div>
-                <h2 class="container__menu--typeplat">DESSERTS</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Farandole de desserts</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Du chef</p>
-                        <p class="container__menu--prix">18€</p>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Crème brûlée</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">Revisitée</p>
-                        <p class="container__menu--prix">22€</p>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <h3 class="container__menu--titreplat">Tiramisu</h3>
-                    <div class="container__menu--infoplat">
-                        <p class="container__menu--soustitreplat">À la noisette</p>
-                        <p class="container__menu--prix">23€</p>
-                    </div>
-                </div>
-            </div>
-            <div class="button">
-                <p class="button--txt">Commander</p>
-            </div>
-        </div>
-    </div>
 
 
     <!-- Footer -->
