--- a/pages/noteenchantee.html
+++ b/pages/noteenchantee.html
@@ -33,145 +33,161 @@
         <!-- Bannière image -->
         <img src="../imgs/noteenchantee.jpg" class="header__imgpagemenu" alt="Ohmyfood! La note enchantée" />
 
-        <!-- Section secondaire -->
-        <div class="container__menu">
-            <div class="container__menu--head">
-                <h1 class="container__menu--title">La note enchantée</h1>
-                <div class="container__menu--heartmenucontainer">
-                    <i class="fas fa-heart container__menu--filledheartmenu"></i>
-                    <i class="far fa-heart container__menu--heartmenu"></i>
-                </div>
-            </div>
-            <!-- Entrées -->
-            <div>
-                <h2 class="container__menu--typeplat">ENTRÉES</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Ravioles de foie gras</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Accompagnés de leur crème à la truffe</p>
-                            <p class="container__menu--prix">25€</p>
+                <!-- Section secondaire -->
+                <div class="container__menu">
+                    <div class="container__menu--head">
+                        <h1 class="container__menu--title">La note enchantée</h1>
+                        <div class="container__menu--heartmenucontainer">
+                            <i class="fas fa-heart container__menu--filledheartmenu"></i>
+                            <i class="far fa-heart container__menu--heartmenu"></i>
                         </div>
                     </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Caviar osciètre</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Sur blini à la farine de blé noir</p>
-                            <p class="container__menu--prix">35€</p>
+                    <!-- Entrées -->
+                    <div>
+                        <h2 class="container__menu--typeplat">ENTRÉES</h2>
+                        <div class="container__menu--barreverte"></div>
+                        <div class="container__menu--bloccontainer">
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Ravioles de foie gras</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Accompagnés de leur crème à la truffe</p>
+                                        <p class="container__menu--prix">25€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Caviar osciètre</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Sur blini à la farine de blé noir</p>
+                                        <p class="container__menu--prix">35€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Homar et espuma de...</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Mariné aux zests d'orange</p>
+                                        <p class="container__menu--prix">20€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                            <div class="container__menu--bloc">
+                                <div class="container__menu--txts">
+                                    <h3 class="container__menu--titreplat">Foie gras de canard cuit entier</h3>
+                                    <div class="container__menu--infoplat">
+                                        <p class="container__menu--soustitreplat">Confiture de figue et pain toasté</p>
+                                        <p class="container__menu--prix">35€</p>
+                                    </div>
+                                </div>
+                                <div class="container__menu--addedtocart"><i
+                                        class="fas fa-check-circle container__menu--check"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Plats -->
+                        <div>
+                            <h2 class="container__menu--typeplat">PLATS</h2>
+                            <div class="container__menu--barreverte"></div>
+                            <div class="container__menu--bloccontainer">
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Noix de coquille Saint-Jacques</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Sur lit de purée céleri-rave</p>
+                                            <p class="container__menu--prix">40€</p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Langoustine poêlée</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Purée de patate douce</p>
+                                            <p class="container__menu--prix">40€</p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                                <div class="container__menu--bloc">
+                                    <div class="container__menu--txts">
+                                        <h3 class="container__menu--titreplat">Mijoté de queue de boeuf</h3>
+                                        <div class="container__menu--infoplat">
+                                            <p class="container__menu--soustitreplat">Et riz sauvage aux zests de citron</p>
+                                            <p class="container__menu--prix">44€
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--addedtocart"><i
+                                            class="fas fa-check-circle container__menu--check"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Desserts -->
+                            <div>
+                                <h2 class="container__menu--typeplat">DESSERTS</h2>
+                                <div class="container__menu--barreverte"></div>
+                                <div class="container__menu--bloccontainer">
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Macaron noisette et chocolat</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Glace au caramel brun et sel de Guérand</p>
+                                                <p class="container__menu--prix">18€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Baba au rhum revisité</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Avec son coulis de citron</p>
+                                                <p class="container__menu--prix">22€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                    <div class="container__menu--bloc">
+                                        <div class="container__menu--txts">
+                                            <h3 class="container__menu--titreplat">Tarte au citron meringuée</h3>
+                                            <div class="container__menu--infoplat">
+                                                <p class="container__menu--soustitreplat">Destructurée</p>
+                                                <p class="container__menu--prix">23€</p>
+                                            </div>
+                                        </div>
+                                        <div class="container__menu--addedtocart"><i
+                                                class="fas fa-check-circle container__menu--check"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="button">
+                                <p class="button--txt">Commander</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
                 </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Homar et espuma de...</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Mariné aux zests d'orange</p>
-                            <p class="container__menu--prix">20€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Foie gras de canard cuit entier</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Confiture de figue et pain toasté</p>
-                            <p class="container__menu--prix">35€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-            <!-- Plats -->
-            <div>
-                <h2 class="container__menu--typeplat">PLATS</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Noix de coquille Saint-Jacques</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Sur lit de purée céleri-rave</p>
-                            <p class="container__menu--prix">40€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Langoustine poêlée</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Purée de patate douce</p>
-                            <p class="container__menu--prix">40€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Mijoté de queue de boeuf</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Et riz sauvage aux zests de citron</p>
-                            <p class="container__menu--prix">44€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-            </div>
-            <!-- Desserts -->
-            <div>
-                <h2 class="container__menu--typeplat">DESSERTS</h2>
-                <div class="container__menu--barreverte"></div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Macaron noisette et chocolat</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Glace au caramel brun et sel de Guérande</p>
-                            <p class="container__menu--prix">18€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Baba au rhum revisité</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Avec son coulis de citron</p>
-                            <p class="container__menu--prix">22€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-                <div class="container__menu--bloc">
-                    <div class="container__menu--txts">
-                        <h3 class="container__menu--titreplat">Tarte au citron meringuée</h3>
-                        <div class="container__menu--infoplat">
-                            <p class="container__menu--soustitreplat">Destructurée</p>
-                            <p class="container__menu--prix">23€</p>
-                        </div>
-                    </div>
-                    <div class="container__menu--addedtocart"><i class="fas fa-check-circle container__menu--check"></i>
-                    </div>
-                </div>
-            </div>
-
-            <div class="button">
-                <p class="button--txt">Commander</p>
-            </div>
-        </div>
-    </div>
 
 
     <!-- Footer -->
