Final+spinner non fonctionnel

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 
 <body>
 
+    <!-- Loader -->
+    <div class="cont">
+    <svg class="spinner" viewBox="0 0 50 50">
+        <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+      </svg>
+    </div>
     <!-- Logo entête -->
     <div class="header">
         <img src="imgs/ohmyfood.png" class="header--logo" alt="Logo Ohmyfood!" />
@@ -154,7 +160,7 @@
             </div>
             <div class="footer--noicontxt">
                 <p class="footer--txt">Mentions légales</p>
-                <p class="footer--txt">Contact</p>
+                <a href="mailto:contact@ohmyfood.fr?" subject="subject text" class="footer--txt">Contact</a>
             </div>
         </div>
     </footer>
