--- a/pages/noteenchantee.html
+++ b/pages/noteenchantee.html
@@ -205,7 +205,7 @@
             </div>
             <div class="footer--noicontxt">
                 <p class="footer--txt">Mentions légales</p>
-                <p class="footer--txt">Contact</p>
+                <a href="mailto:contact@ohmyfood.fr?" subject="subject text" class="footer--txt">Contact</a>
             </div>
         </div>
     </footer>
